--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no' />
   <link rel="stylesheet" href='test.css'></script>
   <script type="text/javascript" src="d3.v3.js"></script>
-  <script src='http://api.tiles.mapbox.com/mapbox.js/v1.6.0/mapbox.js'></script>
+  <script src='https://api.tiles.mapbox.com/mapbox.js/v1.6.0/mapbox.js'></script>
   <script src='leaflet-hash.js'></script>
-  <link href='http://api.tiles.mapbox.com/mapbox.js/v1.6.0/mapbox.css' rel='stylesheet' />
+  <link href='https://api.tiles.mapbox.com/mapbox.js/v1.6.0/mapbox.css' rel='stylesheet' />
   <style>
 #map { position:absolute; top: 65px; bottom:0; width:100%; }
   </style>
